# translator

./: .gitignore  Dockerfile  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
LLM/: Dockerfile
LLM/app/: main.py  model.py  pyproject.toml
accounts/: admin.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
templates/: index.html
translator/: settings.py  urls.py
