[tool.poetry]
name = "translator"
version = "0.1.0"
description = "Minimal translation API"
authors = ["oYPIo <voice2of2reason@gmail.com>"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "==3.11.*"
fastapi = "^0.115.0"
transformers = "^4.38.0"
torch = { url = "https://download.pytorch.org/whl/cu118/torch-2.3.0%2Bcu118-cp311-cp311-linux_x86_64.whl" }

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"